<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView

            style="@style/CardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            <TextView
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:id="@+id/idTextSLider"
                android:text="@string/slidertextone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                />


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerOne"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
             style="@style/CardViewMargin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">

            <TextView
            android:id="@+id/idTextSLider_two"
            android:text="@string/slidertexttwo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            />

             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager_two"
                 android:layout_width="match_parent"
                 android:layout_height="480dp"
                 />

             </LinearLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/idTextSLider_three"
                android:text="@string/slidertextthree"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager_three"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/idTextSLider_four"
                android:text="@string/slidertextfour"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                />
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager_four"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/idTextSLider_five"
                android:text="@string/slidertextfive"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                />
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager_five"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/idTextSLider_six"
                android:text="@string/slidertextsix"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                />



            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager_six"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewMargin"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/idTextSLider_seven"
                    android:text="@string/slidertextseven"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    />



                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager_seven"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:textSize="20sp"
                android:id="@+id/expandableButton1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:drawableLeft="@android:drawable/arrow_down_float"
                android:onClick="expandableButton"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/hotline"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableButton1"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_interpolator="accelerate"
                app:ael_orientation="vertical">

                <include
                    layout="@layout/hotline_layout"
                    android:layout_width="match_parent"
                    android:layout_height="1010dp" />

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        </LinearLayout>



    </LinearLayout>

</ScrollView>


</LinearLayout>