<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="#EDEAEA"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"
                android:paddingLeft="20dp"
                android:layout_gravity="center_horizontal"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView

                    android:textStyle="bold"
                    android:paddingLeft="0dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jatioseba"/>




            </LinearLayout>

            <LinearLayout

                android:paddingLeft="20dp"
                android:layout_weight="2"
                android:gravity="clip_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:text="999"/>

                <Button
                    android:id="@+id/idJatioSebacall"
                    android:textColor="#ffffff"
                    android:background="@drawable/round_button"
                    android:text="@string/call_now"
                    android:textSize="15sp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="right"
                    android:layout_width="100dp"
                    android:layout_height="25dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="#EDEAEA"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"
                android:paddingLeft="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:paddingLeft="0dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sasthobataon"/>




            </LinearLayout>

            <LinearLayout

                android:paddingLeft="20dp"
                android:layout_weight="2"
                android:gravity="clip_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView


                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:text="16263"/>

                <Button

                    android:id="@+id/idSastho"
                    android:textColor="#ffffff"
                    android:background="@drawable/round_button"
                    android:text="@string/call_now"
                    android:textSize="15sp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="right"
                    android:layout_width="100dp"
                    android:layout_height="25dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="#EDEAEA"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"
                android:paddingLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:paddingLeft="0dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baqc"/>

            </LinearLayout>


            <ListView
                android:id="@+id/ArmyRnumberlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="#EDEAEA"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"
                android:paddingLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:paddingLeft="0dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iedcr"/>

            </LinearLayout>


            <ListView
                android:id="@+id/IEDCRnumberlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>